[build-system]
requires = ["flit_core >=3.2,<4", "setuptools"]
build-backend = "flit_core.buildapi"

[project]
name = "dcarte_transform"
authors = [{name = "Alex Capstick", email = "alexander.capstick19@imperial.ac.uk"}, {name = "Francesca Palermo"}]
dynamic = ["version", "description"]
dependencies = [
	"numpy>=1.22",
    "pandas>=1.4",
    "matplotlib>=3.5",
    "dcarte>=0.3",
    "scikit-learn>=1.0",
    "tqdm>=4.64",
    ]